@@ -1,3 +1,12 @@
+2006-11-20  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-cache.el (tramp-get-connection-property)
+	(tramp-set-connection-property): Work with a copy of the vector in
+	order to avoid side effects.
+
+	* tramp-smb.el (tramp-smb-maybe-open-connection): Erase the buffer
+	when the process is killed, because it is reused.
+
 2006-11-07  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-copy-size-limit): New defcustom.
